objects/Invoice_Documents__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Case# 00612946_Approval Notification and Audit Dashboard for TPS Third Party Seller Program - NY.
used in email template</description>
        <formula>Lease_Payment__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Link__c</fullName>
        <formula>IF(  

     AND(ISBLANK(Link_to_Attachment__c),   ISPICKVAL(Status__c, &quot;Approved&quot;) ) , 

     &quot;File has been archived&quot;,  


          IF(ISPICKVAL(Status__c, &quot;Not Submitted&quot;), 

          NULL, HYPERLINK( Link_to_Attachment__c ,&quot;Click to View&quot;) 

)
)</formula>
        <label>Attachment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <formula>Lease_Payment__r.Date_Delivered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Owner_Category__c</fullName>
        <description>Case# 00612946_Approval Notification and Audit Dashboard for TPS Third Party Seller Program - NY. 
used in report</description>
        <formula>IF(ISBLANK(TEXT(Document_Owner__c)), null, TEXT(Document_Owner__c) &amp; &apos; &apos; &amp; Payment_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Owner Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Owner__c</fullName>
        <description>Responsible Party for Document upload</description>
        <label>Document Owner</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Submitted__c</fullName>
        <label>Document Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documents_in_File__c</fullName>
        <label>Documents in File</label>
        <picklist>
            <picklistValues>
                <fullName>Install Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Permits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Copy of Proposal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FPO_Record_Type__c</fullName>
        <description>case 00848075</description>
        <formula>Lease_Payment__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPO Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <description>for case# 00761334</description>
        <formula>TEXT( Lease_Payment__r.Funding_Tranche__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancingType__c</fullName>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Payment_Approved__c</fullName>
        <formula>Lease_Payment__r.Install_Pymnt_Apprvd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Payment Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnect_Payment_Approved__c</fullName>
        <formula>Lease_Payment__r.Intrcnct_Pymnt_Apprvd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnect Payment Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Admin__c</fullName>
        <formula>Lease_Payment__r.Invoice_Admin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Document_Email__c</fullName>
        <label>Invoice Document Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Link__c</fullName>
        <description>Case# 00612946_Approval Notification and Audit Dashboard for TPS Third Party Seller Program - NY. 
used in email template</description>
        <formula>HYPERLINK(Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Lease_Payment__c, Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Lease_Payment__c, Lease_Payment__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Payment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Status__c</fullName>
        <formula>TEXT( Lease_Payment__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Payment__c</fullName>
        <description>Related lease payment</description>
        <label>Lease Payment</label>
        <referenceTo>LeasePayment__c</referenceTo>
        <relationshipLabel>Invoice Documents</relationshipLabel>
        <relationshipName>Invoice_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <formula>Lease_Payment__r.Lease__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Attachment__c</fullName>
        <label>Link to Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Document Upload Location</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mosaic_Status__c</fullName>
        <label>Mosaic Status</label>
        <picklist>
            <picklistValues>
                <fullName>Upload Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mosaic Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_Required_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Required for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_to_Approver__c</fullName>
        <label>Notes to Approver</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_to_Dealer__c</fullName>
        <label>Notes to Dealer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_Rejected__c</fullName>
        <description>Count for rejection times - For the Invoice Document Status Change Project - Bluewolf Created - Jerome Fortunado Requested</description>
        <label>Number of Times Rejected</label>
        <summaryForeignKey>Invoice_Document_Changed__c.Invoice_Documents__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oracle_Vendor_Email_Formula__c</fullName>
        <formula>Lease_Payment__r.Partner_Oracle_Vendor_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Vendor Email (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Vendor_Email__c</fullName>
        <label>Oracle Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Oracle_Vendor_Number__c</fullName>
        <formula>Lease_Payment__r.Partner_Account__r.Oracle_Vendor_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Vendor Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Comments__c</fullName>
        <description>Field used by the Invoice Document object to allow the partners to write in comments on the documents that they upload.</description>
        <label>Partner Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Formula field that references the Type field on the Account of the Lease Payment</description>
        <formula>TEXT(Lease_Payment__r.Partner_Account__r.Type)</formula>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>IF( ISPICKVAL(Program__c,&apos;TPS&apos;), null, Lease_Payment__r.Dealer_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Category__c</fullName>
        <description>Case# 00612946_Approval Notification and Audit Dashboard for TPS Third Party Seller Program - NY. 
used in report</description>
        <formula>CASE(TEXT(Invoice_Type__c), 
&apos;Interconnect&apos;, &apos;20 %&apos;,
&apos;80 %&apos;)</formula>
        <label>Payment Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Defines the program for which this document is created. Ex:- TPS</description>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <formula>Lease_Payment__r.RSM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Project__c</fullName>
        <description>A formula to pull down Residential Project Id from the Financial Payment. Used in the Document Workbench</description>
        <formula>Lease_Payment__r.Residential_Project__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residential Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsible_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner responsible to upload this document</description>
        <label>Responsible Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Documents</relationshipLabel>
        <relationshipName>Invoice_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMS_ID__c</fullName>
        <formula>Lease_Payment__r.SMS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_With__c</fullName>
        <description>Other Parties this document should be shared with</description>
        <label>Shared With</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sharing_Type__c</fullName>
        <description>Defines the sharing setup of the object(Secure or Shared)</description>
        <label>Sharing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Lease_Payment__r.Site_State_Prov__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the type. Document or a Task. Task are also being tracked as part of Invoice document data starting from TPS project</description>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Invoice Documents</label>
    <listViews>
        <fullName>ALLAN_Smart_Energy_Approval_Queue</fullName>
        <booleanFilter>1 AND 2 and 3</booleanFilter>
        <columns>FinancingType__c</columns>
        <columns>Financier__c</columns>
        <columns>Document_Submitted__c</columns>
        <columns>Number_of_Times_Rejected__c</columns>
        <columns>State__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Partner__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <columns>Partner_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Oracle_Vendor_Number__c</field>
            <operation>equals</operation>
            <value>28568,40109</value>
        </filters>
        <filters>
            <field>Lease_Payment_Status__c</field>
            <operation>notContain</operation>
            <value>cancel,terminat</value>
        </filters>
        <label>Angel - Smart &amp; Venture Approval Queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>Anthony_Panganiban</group>
            <group>Invoice_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_INSTALL_Pending_Queue_NA_LEASE</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>FPO_Record_Type__c</columns>
        <columns>Document_Submitted__c</columns>
        <columns>State__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Partner__c</columns>
        <columns>Responsible_Partner__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Financier__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Partner_Comments__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Partner__c</field>
            <operation>notContain</operation>
            <value>gabi solar,test seller</value>
        </filters>
        <filters>
            <field>Document_Submitted__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/30/2014</value>
        </filters>
        <filters>
            <field>RSM__c</field>
            <operation>notEqual</operation>
            <value>Frederic Van Den Besselaer</value>
        </filters>
        <filters>
            <field>Partner_Type__c</field>
            <operation>contains</operation>
            <value>Master,Elite</value>
        </filters>
        <filters>
            <field>Lease_Payment_Status__c</field>
            <operation>notContain</operation>
            <value>cancel,terminat</value>
        </filters>
        <label>a.ALL Pending Queue - Elite&amp;Master</label>
        <language>en_US</language>
        <sharedTo>
            <group>Casey_Hui</group>
            <group>Invoice_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_INTERCONNECT_Pending_Queue_NA_LEASE</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>Date_Delivered__c</columns>
        <columns>Document_Submitted__c</columns>
        <columns>State__c</columns>
        <columns>Partner__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Partner_Comments__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Partner__c</field>
            <operation>notContain</operation>
            <value>gabi solar,test seller</value>
        </filters>
        <filters>
            <field>Document_Submitted__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/30/2014</value>
        </filters>
        <filters>
            <field>RSM__c</field>
            <operation>notEqual</operation>
            <value>Frederic Van Den Besselaer</value>
        </filters>
        <filters>
            <field>Partner_Type__c</field>
            <operation>notContain</operation>
            <value>Master,Elite</value>
        </filters>
        <filters>
            <field>Lease_Payment_Status__c</field>
            <operation>notContain</operation>
            <value>cancel,terminat</value>
        </filters>
        <label>a.ALL Pending Queue-Standard</label>
        <language>en_US</language>
        <sharedTo>
            <group>Anthony_Panganiban</group>
            <group>Casey_Hui</group>
            <group>Invoice_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Beth_s_Queue_in_CO</fullName>
        <columns>Partner__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>Document_Submitted__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <columns>SMS_ID__c</columns>
        <columns>Response_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>FinancingType__c</field>
            <operation>contains</operation>
            <value>Loan</value>
        </filters>
        <filters>
            <field>Documents_in_File__c</field>
            <operation>contains</operation>
            <value>Permit</value>
        </filters>
        <label>Final Permit Queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>Anthony_Panganiban</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Blank_Pending_Queue_NA_LEASE</fullName>
        <columns>Document_Submitted__c</columns>
        <columns>State__c</columns>
        <columns>Partner_Type__c</columns>
        <columns>RSM__c</columns>
        <columns>Partner__c</columns>
        <columns>Responsible_Partner__c</columns>
        <columns>Lease__c</columns>
        <columns>Status__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Lease_Payment_Status__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Partner_Comments__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>_ALL Cases of Status=NONE - NA LEASE</label>
        <language>en_US</language>
        <sharedTo>
            <group>Anthony_Panganiban</group>
            <group>Invoice_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cecil_Revolusun_Approval_Queue</fullName>
        <booleanFilter>1 AND 2 AND 3 and 4</booleanFilter>
        <columns>FinancingType__c</columns>
        <columns>Financier__c</columns>
        <columns>Document_Submitted__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Partner__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <columns>Number_of_Times_Rejected__c</columns>
        <columns>Partner_Comments__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Oracle_Vendor_Number__c</field>
            <operation>equals</operation>
            <value>21002</value>
        </filters>
        <filters>
            <field>Lease_Payment_Status__c</field>
            <operation>notContain</operation>
            <value>cancel,terminat</value>
        </filters>
        <filters>
            <field>FPO_Record_Type__c</field>
            <operation>notContain</operation>
            <value>NH,TPS</value>
        </filters>
        <label>Cecille - Revolusun Special Queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>Anthony_Panganiban</group>
            <group>Invoice_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cecille_Approval_Queue</fullName>
        <booleanFilter>1 AND 2 AND 4 AND (6 or 3) AND 5 AND 7</booleanFilter>
        <columns>FinancingType__c</columns>
        <columns>Financier__c</columns>
        <columns>State__c</columns>
        <columns>Number_of_Times_Rejected__c</columns>
        <columns>Document_Submitted__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Partner__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <columns>Partner_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Partner_Type__c</field>
            <operation>notContain</operation>
            <value>Elite,Master</value>
        </filters>
        <filters>
            <field>RSM__c</field>
            <operation>equals</operation>
            <value>Sarah Amadeo</value>
        </filters>
        <filters>
            <field>Lease_Payment_Status__c</field>
            <operation>notContain</operation>
            <value>cancel,terminat</value>
        </filters>
        <filters>
            <field>FPO_Record_Type__c</field>
            <operation>notContain</operation>
            <value>NH,TPS</value>
        </filters>
        <filters>
            <field>Oracle_Vendor_Number__c</field>
            <operation>equals</operation>
            <value>28389</value>
        </filters>
        <filters>
            <field>Partner__c</field>
            <operation>notContain</operation>
            <value>RevoluSun</value>
        </filters>
        <label>CECILLE - Standard Queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>Anthony_Panganiban</group>
            <group>Invoice_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cecille_Master_Elite_Queue</fullName>
        <booleanFilter>1 AND 2 AND 4 AND (5 or 3) AND 6 AND 7</booleanFilter>
        <columns>FinancingType__c</columns>
        <columns>Financier__c</columns>
        <columns>State__c</columns>
        <columns>Number_of_Times_Rejected__c</columns>
        <columns>Document_Submitted__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Partner__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <columns>Partner_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Partner_Type__c</field>
            <operation>contains</operation>
            <value>Master,Elite</value>
        </filters>
        <filters>
            <field>RSM__c</field>
            <operation>equals</operation>
            <value>Sarah Amadeo</value>
        </filters>
        <filters>
            <field>FPO_Record_Type__c</field>
            <operation>notContain</operation>
            <value>NH,TPS</value>
        </filters>
        <filters>
            <field>Oracle_Vendor_Number__c</field>
            <operation>equals</operation>
            <value>28389</value>
        </filters>
        <filters>
            <field>Lease_Payment_Status__c</field>
            <operation>notContain</operation>
            <value>cancel,terminat</value>
        </filters>
        <filters>
            <field>Partner__c</field>
            <operation>notContain</operation>
            <value>RevoluSun</value>
        </filters>
        <label>Cecille - Master &amp; Elite Queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>Anthony_Panganiban</group>
            <group>Invoice_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CommRep_beth</fullName>
        <columns>State__c</columns>
        <columns>Partner__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Document_Submitted__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <columns>Partner_Comments__c</columns>
        <columns>SMS_ID__c</columns>
        <columns>Response_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Documents_in_File__c</field>
            <operation>contains</operation>
            <value>Commissioning,PTO</value>
        </filters>
        <filters>
            <field>FinancingType__c</field>
            <operation>notContain</operation>
            <value>Loan</value>
        </filters>
        <filters>
            <field>Partner__c</field>
            <operation>notContain</operation>
            <value>Gabi Solar</value>
        </filters>
        <filters>
            <field>Lease_Payment_Status__c</field>
            <operation>notContain</operation>
            <value>cancel,terminat</value>
        </filters>
        <label>PIS Queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>Anthony_Panganiban</group>
            <group>Invoice_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_by_Rebate_Team</fullName>
        <columns>UPDATEDBY_USER</columns>
        <columns>Lease_Payment_Status__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Documents_in_File__c</columns>
        <columns>State__c</columns>
        <columns>Attachment_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Document_Submitted__c</columns>
        <columns>Response_Date__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <columns>Partner__c</columns>
        <columns>RSM__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>z.Others - Rebate Queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>Anthony_Panganiban</group>
            <group>Invoice_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Signed_Proposal</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Payment__c</columns>
        <columns>Lease_Payment_Status__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Link_to_Attachment__c</columns>
        <columns>Attachment_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Documents_in_File__c</field>
            <operation>contains</operation>
            <value>sms</value>
        </filters>
        <filters>
            <field>FinancingType__c</field>
            <operation>equals</operation>
            <value>Loan</value>
        </filters>
        <label>Customer Signed Proposal</label>
        <language>en_US</language>
    </listViews>
</CustomObject>